PROJECT(MONDOC)

## Let's use a reasonable modern version
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET(CMAKE_HAS_SORT 1)

## Find source and headers
FILE(GLOB_RECURSE HEADERS *.h)
FILE(GLOB_RECURSE SOURCES *.c*)

SET(NEO_INSTALL_DIR bin)

IF(CMAKE_HAS_SORT)
  LIST(SORT HEADERS)
  LIST(SORT SOURCES)
ENDIF(CMAKE_HAS_SORT)

ADD_EXECUTABLE(mondoc ${SOURCES} ${HEADERS})

INSTALL(TARGETS mondoc DESTINATION bin)
INSTALL(FILES style.css syntax-style.css lunr.js highlight.pack.js searchprovider.js DESTINATION share/mondoc)
INSTALL(DIRECTORY styles DESTINATION share/mondoc)

SET(CPACK_PACKAGE_NAME "mondoc")
SET(CPACK_PACKAGE_VENDOR "Yannick Pflanzer")
SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Mondoc, a Lua documentation tool")
SET(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/README.md")
SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
SET(CPACK_RESOURCE_FILE_README "${CMAKE_CURRENT_SOURCE_DIR}/README.md")
# SET(CPACK_PACKAGE_ICON "${CMAKE_CURRENT_SOURCE_DIR}/Data/neo-icon.png")
SET(CPACK_PACKAGE_VERSION_MAJOR "0")
SET(CPACK_PACKAGE_VERSION_MINOR "2")
SET(CPACK_PACKAGE_VERSION_PATCH "0")
SET(CPACK_PACKAGE_INSTALL_DIRECTORY /usr)

IF(WIN32)
SET(CPACK_GENERATOR "NSIS;ZIP")
ENDIF()

IF(UNIX AND NOT APPLE)
  SET(CPACK_PACKAGE_CONTACT Yannick Pflanzer <yannick.pflanzer@scary-squid.de>)
  SET(CPACK_GENERATOR "STGZ;TGZ;DEB;RPM;")
  SET(CPACK_STRIP_FILES ON)

  IF(BUILD_PACKAGE)
	MESSAGE("-- Creating package to install to " ${CPACK_PACKAGE_INSTALL_DIRECTORY})
	ADD_DEFINITIONS(-DRESOURCE_DIR="${CPACK_PACKAGE_INSTALL_DIRECTORY}/share/mondoc/")
  ENDIF()
ENDIF()

IF(BUILD_PACKAGE)
  INCLUDE(CPack)
ENDIF()